Updating gitconfig and new friendly ffs alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,23 +1,28 @@
 [alias]
-        c = commit -am
+        c = commit
         up = pull
         p = push
         s = status -s
         df = diff --color --color-words --abbrev
         lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
-    	# View abbreviated SHA, description, and history graph of the latest 20 commits
-	l = log --pretty=oneline -n 20 --graph --abbrev-commit
+        # View abbreviated SHA, description, and history graph of the latest 20 commits
+        l = log --pretty=oneline -n 20 --graph --abbrev-commit
 [color]
         ui = always
-[user]
-        name = Karl Boyle
-        email = karlboyle@gmail.com
 [github]
   user = karlboyle
+
 [filter "lfs"]
+        required = true
         clean = git-lfs clean -- %f
         smudge = git-lfs smudge -- %f
         process = git-lfs filter-process
-        required = true
+        
 [includeIf "gitdir:~/work/"]
-  path = .gitconfig-work
+    path = ~/.gitconfig-work
+ 
+[includeIf "gitdir:~/personal/"]
+    path = ~/.gitconfig-personal
+    
+[core]
+        excludesfile = ~/.gitignore
